--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mdb-angular-ui-kit": "^4.0.0",
     "moment": "^2.29.4",
     "ngx-bootstrap-icons": "^1.9.2",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
